# event_iterator

./: Cargo.toml  README.md
examples/: stdin.rs  stdout.rs
src/: alloc.rs  event_iter.rs  from_iter.rs  into_event_iter.rs  lib.rs  map.rs  next.rs  unsafe.rs
